<?xml version="1.0"?>
<package format="3">
  <name>wheeltec_description</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Wheeltec robot description and simulation</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_cmake</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>